--- a/Netdb/Netdb.csproj
+++ b/Netdb/Netdb.csproj
@@ -20,9 +20,10 @@
     <PackageReference Include="Discord.Net" Version="2.3.1" />
     <PackageReference Include="Discord.Net.Core" Version="2.3.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
-    <PackageReference Include="MySql.Data" Version="8.0.23" />
+    <PackageReference Include="MySql.Data" Version="8.0.25" />
     <PackageReference Include="MySqlBackup.NET" Version="2.3.4" />
-    <PackageReference Include="MySqlConnector" Version="1.3.3" />
+    <PackageReference Include="MySqlConnector" Version="1.3.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
   </ItemGroup>
 
